--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 <li class="list-group-item p-2 text-base text-gray-500 border">Item 3</li>
                 <li class="list-group-item p-2 text-base text-gray-500 border">Item 4</li>
             </ul>
+            <div id="output"></div>
+            <button class="btn btn-dark bg-black block text-white w-full" id="button">Click</button>
        </div>
    </div>
 
