--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
 </head>
 <body>
    <header id="main-header" class="bg-green-500 text-white mb-3 py-5">
-       <div class="container mx-24">
+       <div class="container lg:mx-24">
             <h1 id ="header-title" class="text-3xl font-medium">Items Lister<span class="hidden">123</span></h1>
        </div>
    </header>
 
-   <div class="container w-8/12 border mx-24">
+   <div class="container lg:w-8/12 border lg:mx-24">
        <div id="main" class="card card-body px-5">
            <h2 class="title text-2xl font-bold my-4">Add Items</h2>
-            <form class="form-inline mb-3">
-                <input type="text" class="form-control mr-2 border py-1">
+            <form class="form-inline mb-3 w-full">
+                <input type="text" class="form-control mr-2 w-8/12 border py-1">
+                <select class="form-control mr-2 py-1 border">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
                 <input type="submit" class="btn btn-dark bg-black text-white text-base py-1 px-4" value="submit">
             </form>
 
@@ -31,8 +36,12 @@
                 <li class="list-group-item p-2 text-base text-gray-500 border">Item 4</li>
             </ul>
             <div id="output"></div>
-            <button class="btn btn-dark bg-black block text-white w-full" id="button">Click</button>
-       </div>
+            <button class="btn btn-dark bg-black block text-white w-full" id="button">Click Here</button>
+            <br>
+            <div id="box" class="w-full h-96" style="background: #f4f4f4;">
+                <h1>HELLO</h1>
+            </div>
+        </div>
    </div>
 
    <script src="dom.js"></script>
